Align copyright to left & add space between info & copy, fixes #19

--- a/src/sass/site/_site.scss
+++ b/src/sass/site/_site.scss
@@ -32,12 +32,8 @@
 		text-decoration: underline;
 	}
 
-	.site-info {
-		float: left;
-	}
-
-	.site-copyright {
-		float: right;
+	.site-info + .site-copyright {
+		margin-top: $size__gutter;
 	}
 }
 
